Fixing an overflow issue depending of the font-size of the list items

--- a/src/sass/partials/virtual-select.scss
+++ b/src/sass/partials/virtual-select.scss
@@ -219,6 +219,7 @@ body.vscomp-popup-active {
   height: $optionHeight;
   align-items: center;
   cursor: pointer;
+  overflow: hidden;
 
   &.selected {
     background-color: $selectedColor;
